--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,46 @@ blockquote{overflow:hidden;border:0;padding:8px 12px;margin:5px 0 15px;backgroun
 .ui.form textarea, .ui.form input[type="text"], .ui.form input[type="email"], .ui.form input[type="date"], .ui.form input[type="password"], .ui.form input[type="number"], .ui.form input[type="url"], .ui.form input[type="tel"], .ui.form .ui.input {
 	width: 100%;
 }
+.ui.label {
+	display: inline-block;
+	vertical-align: middle;
+	margin: -0.25em 0.25em 0em;
+	background-color: #E8E8E8;
+	border-color: #E8E8E8;
+	padding: 0.5em 0.8em;
+	color: rgba(0, 0, 0, 0.65);
+	/* text-transform: uppercase; */
+	font-weight: normal;
+	border-radius: 0.325em;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: background 0.1s linear;
+	transition: background 0.1s linear;
+}
+.ui.ribbon.label {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.ui.ribbon.label {
+	position: relative;
+	left: -2rem;
+	padding-left: 2rem;
+	border-radius: 0 4px 4px 0;
+	border-color: rgba(0, 0, 0, 0.15);
+	font-size: 1em;
+}
+
+.block {
+	position: relative;
+	background: #fff;
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 5px;
+	box-shadow: 0 5px 20px #bbb;
+	-moz-box-shadow: 0 5px 20px #bbb;
+}
 
 
 
