--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,86 @@ blockquote{overflow:hidden;border:0;padding:8px 12px;margin:5px 0 15px;backgroun
 	-moz-box-shadow: 0 5px 20px #bbb;
 }
 
+.post-near {
+	list-style: none;
+	font-size: 15px;
+	padding: 0;
+	color: #999;
+}
+
+.post-near li {
+	margin: 10px 0;
+}
+
+/* 侧边栏友情链接和回复列表中的头像 */
+img.avatar {
+	float: left;
+	height: 40px;
+	width: 40px;
+	margin-right: 10px;
+	border-radius: 50px;
+
+	transition: 500ms;
+	-o-transition: 500ms;
+	-moz-transition: 500ms;
+	-webkit-transition: 500ms;
+}
+img.avatar:hover {
+	-moz-box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.1),1px 1px 30px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.1),1px 1px 30px 5px rgba(0, 0, 0, 0.2);
+
+	opacity: .8;
+}
+.comment-list .comment-author img.avatar:hover {
+	transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+}
+
+/* 评论列表样式 */
+.comment-list {
+	padding-left: 0;
+}
+.comment-list, .comment-children {
+	list-style: none;
+}
+.comment-list .comment-author {
+	float: left;
+}
+.comment-list .comment-content {
+	clear: both;
+	color:#555;
+	margin-left: 50px;
+	font-size: 15px;
+}
+.comment-list .comment-meta a {
+	color: rgba(0, 0, 0, 0.4);
+	font-size: 15px;
+}
+.comment-list .comment-meta {
+	float: right;
+}
+.comment-list .comment-reply {
+
+	font-size: 13px;
+	margin-bottom: 10px;
+	margin-left: 50px;
+
+	transition: opacity 0.1s ease-out;
+	-o-transition: opacity 0.1s ease-out;
+	-moz-transition: opacity 0.1s ease-out;
+	-webkit-transition: opacity 0.1s ease-out;
+}
+
+.comment-parent>.comment-children {
+	margin-left: 30px;
+	padding-left: 30px;
+	border-left: 1px dotted rgba(0, 0, 0, 0.35);
+
+}
+
 
 
 .l-header{background-attachment:fixed;-webkit-background-size:100% 100%;-moz-background-size:100% 100%;-o-background-size:100% 100%;z-index:10;position:relative;zoom:1;}
